[project]
name = "taid"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "aryadovoy",email = "ryav.omsk@gmail.com"},
]
dependencies = [
    "telethon>=1.34.0",
]
requires-python = ">=3.12.0"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.2.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.2",
]
